--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -64,6 +64,7 @@
         </li>
       </ul>
       <ul class="navbar-nav">
+        <app-lang-selector></app-lang-selector>
         <app-theme-selector *ngIf="themeEnabled"></app-theme-selector>
         <li
           class="nav-item nav-link position-relative notification me-0 me-lg-2 d-flex justify-content-start align-items-center"
