--- a/src/app/shared/components/lang-selector/lang-selector.component.html
+++ b/src/app/shared/components/lang-selector/lang-selector.component.html
@@ -1,14 +1,14 @@
-<li ngbDropdown class="language-selector nav-item dropdown" display="dynamic" *transloco="let t; read: 'language'">
-  <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownUser" role="button" aria-expanded="false">
+<div ngbDropdown class="language-selector nav-item dropdown" display="dynamic" *transloco="let t; read: 'language'">
+  <button class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownUser" role="button" aria-expanded="false">
     <span *ngIf="isMobile$ | async" class="me-1">
       {{ t('title') }}
     </span>
     <i class="bi bi-fs-1_2x fw-bold bi-translate"></i>
-  </a>
+  </button>
   <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownUser">
-    <a *ngFor="let language of languages" ngbDropdownItem href="javascript:void(0)"
-      (click)="switchLanguage(language.code)" [ngClass]="{'active':isActive(language.code)}">
-      <img [src]="language.icon" class="language-icon">{{ language.title }}
-    </a>
+    <button *ngFor="let language of languages" ngbDropdownItem (click)="switchLanguage(language.code)"
+      [ngClass]="{'active':isActive(language.code)}">
+      <img [src]="language.icon" [alt]="language.code" class="language-icon">{{ language.title }}
+    </button>
   </div>
-</li>
+</div>
