Fix sonar issues

--- a/src/app/shared/components/lang-selector/lang-selector.component.html
+++ b/src/app/shared/components/lang-selector/lang-selector.component.html
@@ -1,5 +1,5 @@
 <div ngbDropdown class="language-selector nav-item dropdown" display="dynamic" *transloco="let t; read: 'language'">
-  <button class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownUser" role="button" aria-expanded="false">
+  <button class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownUser" aria-expanded="false">
     <span *ngIf="isMobile$ | async" class="me-1">
       {{ t('title') }}
     </span>
