--- a/src/app/modules/deck-builder/library-type-filter/library-type-filter.component.html
+++ b/src/app/modules/deck-builder/library-type-filter/library-type-filter.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngFor="let type of typeList">
-  <span (click)="toggle(type.name)" [title]="type.name">
+  <span (click)="toggle(type.name)" [title]="type.label | transloco">
     <i class="btn-icon vtes-big" [class]="type.icon" [ngClass]="{
         'non-selected': !isSelected(type.name),
         'bg-dark': isSelected(type.name)
