--- a/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
+++ b/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
@@ -49,7 +49,9 @@
           <ng-container *ngIf="(krcgCard$ | async)?.rulings as krcgRulings">
             <strong>{{ t('rulings') }}</strong>
             <ul>
-              <li *ngFor="let ruling of krcgRulings" [innerHTML]="formatText(ruling) "></li>
+              <li *ngFor="let ruling of krcgRulings">
+                <app-ruling-text [ruling]="ruling"></app-ruling-text>
+              </li>
             </ul>
           </ng-container>
           <ng-container *ngIf="(preconstructedDecks$ | async)?.decks as decks">
