--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,3 +118,7 @@ $handleBgColor: var(--bs-primary-rgb);
   -ms-user-select: none;
   user-select: none;
 }
+
+.default-locale-name {
+  font-size: 0.7em;
+}
