--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -154,7 +154,7 @@
       <a class="text-center text-muted w-responsive mx-auto" href="https://www.buymeacoffee.com/zavierazo"
         target="_blank">
         <img width="235" height="50"
-          src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=zavierazo&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00"
+          [src]="'https://img.buymeacoffee.com/button-api/?text=' + t('buy_me_a_coffee') + '&emoji=☕&slug=zavierazo&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00'"
           alt="Buy me a coffee" />
       </a>
     </div>
