--- a/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
+++ b/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
@@ -63,7 +63,7 @@
     <div class="col-6 form-check" *ngFor="let taint of (taints$ | async)">
       <input class="form-check-input" type="checkbox" [id]="taint" [formControlName]="taint">
       <label class="form-check-label" [for]="taint">
-        {{ taint | titlecase }}
+        {{ 'vtes.taints.' + taint | translocoFallback: taint | titlecase }}
       </label>
     </div>
   </form>
