Add oblivion discipline

--- a/src/icons.scss
+++ b/src/icons.scss
@@ -255,6 +255,12 @@ i.obfuscate {
 i.obfuscatesup {
   content: url(/assets/img/icons/disciplines/obfuscatesup.svg);
 }
+i.oblivion {
+  content: url(/assets/img/icons/disciplines/oblivion.svg);
+}
+i.oblivionsup {
+  content: url(/assets/img/icons/disciplines/oblivionsup.svg);
+}
 i.obtenebration {
   content: url(/assets/img/icons/disciplines/obtenebration.svg);
 }
