--- a/src/app/modules/deck-shared/library-card/library-card.component.html
+++ b/src/app/modules/deck-shared/library-card/library-card.component.html
@@ -27,6 +27,11 @@
               <span>
                 {{ card.name }}
               </span>
+              @if(card.aka && card.aka !== card.name){
+              <span class="text-muted default-locale-name">
+                {{ card.aka }}
+              </span>
+              }
               }
             </span>
           </h4>
