--- a/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
+++ b/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
@@ -27,6 +27,11 @@
               <span>
                 {{ card.name }}
               </span>
+              @if(card.aka && card.aka !== card.name){
+              <span class="text-muted default-locale-name">
+                {{ card.aka }}
+              </span>
+              }
               }
             </span>
             <small class="float-start ms-1 d-none d-sm-inline">
