--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -58,6 +58,11 @@
           </div>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/statistics" [routerLinkActive]="['active']" (click)="isCollapsed = true">
+            {{ t('statistics') }}
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/contact" [routerLinkActive]="['active']" (click)="isCollapsed = true">
             {{ t('contact') }}
           </a>
