--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -111,7 +111,7 @@
               </div>
             </div>
             <div class="row d-flex justify-content-center">
-              <div class="col-md-10 row row-cols-2 row-cols-sm-3 row-cols-md-5 g-2 justify-content-center">
+              <div class="col-md-10 row row-cols-2 row-cols-sm-3 row-cols-md-6 g-2 justify-content-center">
                 <div class="col d-grid">
                   <button type="button" class="btn btn-info" (click)="onShare()" gaEvent="click" gaCategory="share">
                     <i class="bi bi-share me-2"></i><span>{{ t('share') }}</span>
@@ -139,6 +139,12 @@
                   <a type="button" class="btn btn-secondary" [href]="exportUrl+'?type=BCN_CRISIS'" target="_blank"
                     gaEvent="export" gaCategory="bcnCrisis">
                     <i class="bi bi-download me-2"></i><span>BCN&nbsp;Crisis</span>
+                  </a>
+                </div>
+                <div class="col d-grid">
+                  <a type="button" class="btn btn-secondary" (click)="onCopyDeckToCLipboard()" target="_blank"
+                    gaEvent="click" gaCategory="clipboard">
+                    <i class="bi bi-clipboard me-2"></i><span>{{ t('clipboard') }}</span>
                   </a>
                 </div>
               </div>
