--- a/src/icons.scss
+++ b/src/icons.scss
@@ -143,6 +143,9 @@ i.ventrue {
 i.ventrueanti {
   content: url(/assets/img/icons/clans/ventrueantitribu.svg);
 }
+i.hecata {
+  content: url(/assets/img/icons/clans/hecata.svg);
+}
 
 /* Creeds */
 i.avenger {
