--- a/src/app/modules/deck-card/deck-card.component.scss
+++ b/src/app/modules/deck-card/deck-card.component.scss
@@ -1,9 +1,7 @@
-@use 'sass:color';
-
 .deck-card {
   min-width: 300px;
   background-color: #ffffff;
-  background: linear-gradient(#ffffff, color.adjust(#ffffff, $lightness: -20%));
+  background: linear-gradient(#ffffff, darken(#ffffff, 20));
   box-shadow: 0 4px 10px -4px rgba(0, 0, 0, 0.4);
   overflow: hidden;
   position: relative;
