--- a/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
+++ b/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
@@ -36,7 +36,7 @@
             </span>
             <small class="float-start ms-1 d-none d-sm-inline">
               <span class="badge rounded-pill bg-dark text-white crypt_group">
-                {{ card.group == -1 ? "any" : card.group }}
+                {{ card.group == -1 ? "any" : "G"+card.group }}
               </span>
             </small>
           </h4>
