--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -62,8 +62,8 @@
           </button>
         </div>
         <ul class="col list-group" *ngFor="let library of (library$ | async)! ; trackBy: trackByFn">
-          <app-library [card]="getCard(library)" [withControls]="true" (cardAdded)="addCard($event)"
-            (cardRemoved)="removeCard($event)"></app-library>
+          <app-library [card]="getCard(library)" [librarySize]="(librarySize$ | async)!" [withControls]="true"
+            (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)"></app-library>
         </ul>
       </div>
     </div>
